# tma4280

./: COPYING  Makefile  README.md
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt  blaslapack.h  common.c  common.h
examples/crash/: CMakeLists.txt  Makefile  approxflop  hello.c  hello2.c  hello3.c  hello4.c  timing.c  utils.c  utils.h  utils2.c  utils2.h
examples/cxxmatrix/: CMakeLists.txt  matrix.hh  testmatrix.cpp
examples/mpi/: CMakeLists.txt  hellompi.c  hellompi.f90  integrate.c
examples/mpiio/: CMakeLists.txt  mpiio.c
examples/mpiping/: CMakeLists.txt  mpiping-collective.c  mpiping-individual.c
examples/mpisum/: CMakeLists.txt  common.c  common.h  hybrid-splitav-blas-l3.c  hybrid-splitav-blas.c  hybrid-splitv-blas-l3.c  hybrid-splitv-blas.c  hybrid-splitv.c  mpi-splitav-blas-l3.c  mpi-splitav-blas.c  mpi-splitav.c  mpi-splitv-blas-l3.c  mpi-splitv-blas.c  mpi-splitv.c  runall.sh.in
examples/openmp/: CMakeLists.txt  common.c  common.h  integrate.c  omp-blas-l3.c  omp-blas.c  omp-macro-conservative-blas-timing.c  omp-macro-conservative-blas.c  omp-macro-conservative.c  omp-macro.c  omp-micro.c  runall.sh.in  serial-blas-l3.c  serial-blas.c  serial.c
examples/petsc/: CMakeLists.txt  poisson-petsc-smart-threads.cpp  poisson-petsc-smart.cpp  poisson-petsc-vecsmart.cpp  poisson-petsc.cpp
examples/petsc/cmake/Modules/: FindPetsc.cmake
examples/poisson/: CMakeLists.txt  Doxyfile  blaslapack.h  common.c  common.h  fst.f  poisson-banded-cholesky.c  poisson-cg-local.c  poisson-cg-matrixless.c  poisson-cg-tensor.c  poisson-cg.c  poisson-cholesky.c  poisson-diag-fst.c  poisson-diag.c  poisson-gj-matrixless.c  poisson-gj.c  poisson-gs-matrixless.c  poisson-gs.c  poisson-lu.c  poisson-pcg.c  poisson1D-MPI.c  poisson1D.c  poisson2D-MPI.c  poisson2D.c  poissoncommon.c  poissoncommon.h  solvers.c  solvers.h
examples/sum/: CMakeLists.txt  mpi-splitav.c  mpi-splitv-blas.c  mpi-splitv.c  omp-macro-blas.c  omp-macro-conservative.c  omp-macro.c  omp-micro.c  serial.c
examples/timing/: CMakeLists.txt  daxpy.c  daxpy.f  justopt.m  makeascs.sh  maketableplot.m  mxm.c  mxm.f  rowaverages.m  sizeopt.m  timing-threads.sh  timing.sh
exercises/: Makefile
exercises/ex1/: CMakeLists.txt  Makefile  mxv.c  p1.tex  s1.tex
exercises/ex2/: Makefile  p2.tex  s2.tex
exercises/ex3/: Makefile  p3.tex  s3.tex
exercises/ex4/: Makefile  p4.tex
exercises/ex5/: Makefile  p5.tex
exercises/ex6/: CMakeLists.txt  Makefile  job.sh  p6.tex  poisson.c  poisson.f
notes/: Makefile
notes/00.intro/: Makefile  figure1.eps  intro.tex
notes/01.single/: .single.tex.swp  Makefile  single.tex
notes/02.git/: Makefile  conflict  git.tex
notes/02.multi/: multi.tex
notes/03.multi/: Makefile  multi_notes.tex
notes/03.openmp/: compile-njord  cs.fig  mpi.fig  openmp-for.c  openmp-for.f  openmp-mxv.c  openmp-notes.tex  openmp-reduction-mult.c  openmp-reduction.c  openmp.fig  referanser.bib  serial-for.f  serial-mxv.c  serial.c
notes/04.git/: git.tex  kongull-setup-git
notes/04.openmp/: Makefile  mpi-openmp-mxv.c  openmp-for-dynamic-chunk.c  openmp-for-dynamic.c  openmp-for-guided-chunk.c  openmp-integrate.c  openmp-sections.c  openmp_notes.tex  serial-for.c  serial-integrate.c  serial-sections.c  serial.c
notes/05.basic/: Makefile  basic.tex
notes/05.basic/results/: Table1.tex  Table2.tex  Table3.tex  Table4.tex  Table5.tex  Table6.tex
notes/06.poisson/: Makefile  poisson.tex
notes/07.poisson-fdm/: Makefile  ThreePointStencil.fig  poisson-fdm.tex
notes/08.poisson-diag/: Makefile  poisson-diag.tex
notes/09.mpi-io/: Makefile  close.c  collective-write.c  combined.c  comm.c  coord.c  createarrayview.c  createsplitview.c  dimsblock.c  dimsstrip.c  explicit-offset-write.c  fileview.c  infoinit.c  infoopen.c  infoset.c  mpiio_notes.tex  open-handle.c  overlapping.c  referanser.bib  separate-handle-write.c  setsplitview.c  shared-write.c  writesplitview.c
slides/: Makefile
slides/00.curriculum/: Makefile  curriculum.tex
slides/01.trends/: Makefile  trends.tex
slides/02.thetool/: Makefile  thetool.tex
slides/03.crash/: .timing.c.swp  Makefile  crash.tex
slides/03.crash/test/: CMakeLists-openmp.txt  CMakeLists-openmpopt.txt  CMakeLists.txt  forcecompilers.sh  oot.sh
slides/03.multi/: multi.tex
slides/04.multi/: Makefile  multi.tex
slides/05.cmake/: cmake.tex
slides/05.cmake/test/: CMakeLists-globbing.txt  CMakeLists-openmp.txt  CMakeLists-openmpopt.txt  CMakeLists.txt  Makefile.handwritten
slides/05.mpi/: Makefile  mpi.tex
slides/06.kongull/: Makefile  chmod  cmake  jobscript  keys  kongull.tex  listing  login  modules  passwd  qsub  showq  sshconfig  sshfs  sshx
slides/06.openmp/: cmake-openmp.txt  openmp-slides.tex  presentasjon2-en.tex
slides/07.openmp/: Makefile  compile-gnu  compile-vilje  mpi-mxv.c  openmp.tex  serial-mxv-ref.c
slides/08.sum/: Makefile  blas-mxv.c  openmp-mxv-ref.c  serial-mxv-2.c  summing.tex
slides/09.poisson/: Makefile  conv1.m  exact1.m  poisson-slides.tex  poisson1D.m  source1.m
slides/10.solvers/: Makefile  cg.c  chol.c  dataexchange.fig  gj-mpi.c  gj-naive-rtol.c  gj-naive.c  gj-threads-mfree-redundant.c  gj-threads-mfree.c  gj-threads.c  gs-naive-rtol.c  gs-naive.c  gs-threads-rb.c  meshsplit.fig  poisson-solvers.tex  prototype.c  redblack.fig  redundant.fig  solve-chol.c  solve-lu.c
slides/11.mpi-io/: Makefile  mpiio_slides.tex
slides/12.petsc/: Makefile  modulepath.cmake  oot.sh  params.sh  petsc-build.sh  petsc-matrix.c  petsc-smartvec.c  petsc-solve.c  petsc-solver.c  petsc-sparsity.c  petsc-sparsity2.c  petsc-sync.c  petsc-vector.c  petsc.tex  usage.cmake
slides/13.recap/: .recap.tex.swp  Makefile  pingpong.c  plots.m  recap.tex  throughput.c
